# Zonespy

./: .gitignore  LICENSE  README.md  pyproject.toml
Zonespy/: __init__.py  config.example.toml  jade_dens.py  jedi.py  mag.py  plotting.py  utils.py  uvs.py
examples/: ZonespyExample.ipynb
